--- a/comment.html
+++ b/comment.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Comment ça marche - Provision Box</title>
+    <meta name="description" content="Provision Box - Fer Commissions Gagne Commissions vous propose sa brochure interactive sous la forme du site provisionbox.github.io">
+    <meta property="og:title" content="Provision Box" />
+    <meta property="og:url" content="https://provisionbox.github.io/comment.html" />
+    <meta property="og:description" content="Provision Box - Fer Commissions Gagne Commissions vous propose sa brochure interactive sous la forme du site provisionbox.github.io">
+    <meta property="og:image" content="/assets/img/thumbnail.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="640">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
