--- a/comment.html
+++ b/comment.html
@@ -92,7 +92,7 @@
                     <li class="list-inline-item list-inline-item"><a href="avantage.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-left fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
 
                     <li
-                        class="list-inline-item list-inline-item"><a href="contact.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-phone fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
+                        class="list-inline-item list-inline-item"><a href="contact.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-envelope-o fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
                 </ul>
             </div>
         </div>
