added buttons text

--- a/avantage.html
+++ b/avantage.html
@@ -60,15 +60,24 @@
             <div class="video-container"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/_z-X4KC-k3g?loop=1&amp;playlist=_z-X4KC-k3g" width="560" height="315"></iframe></div>
         </div>
     </section>
-    <div class="container">
-        <div class="row">
-            <div class="col text-center">
-                <ul class="list-inline text-center">
-                    <li class="list-inline-item list-inline-item"><a href="index.html"><span data-aos="slide-left" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-left fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a>
-                        <a
-                            href="comment.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-right fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a>
-                    </li>
-                </ul>
+        <div class="container">
+        <div class="col">
+            <div class="row">
+                <div class="col text-center">
+                    <ul class="list-inline text-center" style="height: 29px;">
+                        <li class="list-inline-item list-inline-item"><a href="index.html"><span data-aos="slide-left" class="fa-stack fa-lg" style="padding: 0px;width: 70px;"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-left fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a>
+                            <a
+                                href="comment.html"><span data-aos="slide-right" class="fa-stack fa-lg" style="width: 70px;"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-right fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item list-inline-item"><a href="index.html"><span style="color: rgb(255,255,255);padding: 0px;">Précédent</span></a><a href="comment.html"><span style="color: rgb(255,255,255);padding: 12px;">Suivant</span></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
