--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                         <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Adresse Mail</label><input class="form-control" type="email" id="email-address" required="" placeholder="Adresse Mail" name="_replyto"><small class="form-text text-danger help-block"></small></div>
                     </div>
                     <div class="control-group">
-                        <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Téléphone</label><input class="form-control" type="tel" id="phone" required="" placeholder="Téléphone" name="phone"><small class="form-text text-danger help-block"></small></div>
+                        <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Téléphone - WhatsApp</label><input class="form-control" type="tel" id="phone" required="" placeholder="Téléphone" name="phone"><small class="form-text text-danger help-block"></small></div>
                     </div>
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Code&nbsp;Manager</label><input class="form-control" type="text" id="manager" placeholder="Code Manager" required="" name="manager-code"><small class="form-text text-danger help-block"></small></div>
