--- a/comment.html
+++ b/comment.html
@@ -86,14 +86,22 @@
         </div>
     </section>
     <div class="container">
-        <div class="row">
-            <div class="col text-center">
-                <ul class="list-inline text-center">
-                    <li class="list-inline-item list-inline-item"><a href="avantage.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-left fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
-
-                    <li
-                        class="list-inline-item list-inline-item"><a href="contact.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-envelope-o fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
-                </ul>
+        <div class="col">
+            <div class="row">
+                <div class="col text-center" style="height: 45px;">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item list-inline-item"><a href="avantage.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-long-arrow-left fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
+                        <li
+                            class="list-inline-item list-inline-item"><a href="contact.html"><span data-aos="slide-right" class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: #ffffff;"></i><i class="fa fa-envelope-o fa-stack-1x fa-inverse" style="color: #432b2b;"></i></span></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item list-inline-item"><a href="index.html"><span style="color: rgb(255,255,255);padding: 0px;">Précédent</span></a><a href="comment.html"><span style="color: rgb(255,255,255);padding: 12px;">Contact</span></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
