corrected grammatical error

--- a/avantage.html
+++ b/avantage.html
@@ -47,7 +47,7 @@
                 <div class="bg-faded p-5 rounded">
                     <p class="mb-0">Pas besoin de capital pour commencer votre business.</p>
                     <p class="mb-0">Nos paniers sont composés de produits essentiels, ceux dont tout le monde achète tout le long de leur vie.</p>
-                    <p class="mb-0">Notre système est simple à comprendre et à le mettre en pratique.</p>
+                    <p class="mb-0">Notre système est simple à comprendre et à mettre en pratique.</p>
                     <p class="mb-0">Vous recevez des commissions en faisant vos provisions. "Fer Commissions! Gagne Commissions!"</p>
                     <p class="mb-0">Avec le système mise en place, vous n'avez pas de présentation du business, ni de livraison du produit à faire, Provision Box s'en charge à votre place.</p>
                     <p class="mb-0">Vous aidez ceux autour de vous.</p>
