removed required attribute from message field in contact page

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Code&nbsp;Manager</label><input class="form-control" type="text" id="manager" placeholder="Code Manager" required="" name="manager-code"><small class="form-text text-danger help-block"></small></div>
                     </div>
                     <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-3"><label style="color: rgb(218,218,218);">Message</label><textarea class="form-control" id="message" data-validation-required-message="Please enter a message." required="" placeholder="Message" rows="5" name="message"></textarea>
+                        <div class="form-group floating-label-form-group controls mb-3"><label style="color: rgb(218,218,218);">Message</label><textarea class="form-control" id="message" data-validation-required-message="Please enter a message." placeholder="Message" rows="5" name="message"></textarea>
                             <small
                                 class="form-text text-danger help-block"></small>
                         </div>
