--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                         <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Créneau Horaire</label>
                             <div>
                                 <select name="crenau" id="crenau" required="">
-                                    <option>Sélecter</option>
+                                    <option disabled="disabled" selected="selected">Sélecter un crénau</option>
                                     <option value="Mardi 19:00">Mardi 19:00</option>
                                     <option value="Mercredi 17:30">Mercredi 17:30</option>
                                     <option value="Vendredi 18:00">Mercredi 17:30</option>
