correction on select on contact page

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Responsive-Youtube-Embed.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.js"></script>
 </head>
 
 <body style="/*background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('bg.jpg');*/background-color: #432b2b;">
@@ -58,11 +59,11 @@
                         <div class="form-group floating-label-form-group controls"><label style="color: rgb(218,218,218);">Créneau Horaire</label>
                             <div>
                                 <select name="crenau" id="crenau" required="">
-                                    <option disabled="disabled" selected="selected">Sélecter un crénau</option>
+                                    <option value="">Sélecter un crénau</option>
                                     <option value="Mardi 19:00">Mardi 19:00</option>
                                     <option value="Mercredi 17:30">Mercredi 17:30</option>
-                                    <option value="Vendredi 18:00">Mercredi 17:30</option>
-                                    <option value="Samedi 10:00">Mercredi 17:30</option>
+                                    <option value="Vendredi 18:00">Vendredi 18:00</option>
+                                    <option value="Samedi 10:00">Samedi 10:00</option>
                                 </select>
                             </div>
                             <small class="form-text text-danger help-block"></small>
