--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col text-center">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item list-inline-item"><a href="comment.html"><span style="color: rgb(255,255,255);padding: 12px;">Suivant</span></a></li>
+                        <li class="list-inline-item list-inline-item"><a href="avantage.html"><span style="color: rgb(255,255,255);padding: 12px;">Suivant</span></a></li>
                     </ul>
                 </div>
             </div>
