--- a/comment.html
+++ b/comment.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col text-center">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item list-inline-item"><a href="avantage.html"><span style="color: rgb(255,255,255);padding: 0px;">Précédent</span></a><a href="comment.html"><span style="color: rgb(255,255,255);padding: 12px;">Contact</span></a></li>
+                        <li class="list-inline-item list-inline-item"><a href="avantage.html"><span style="color: rgb(255,255,255);padding: 0px;">Précédent</span></a><a href="contact.html"><span style="color: rgb(255,255,255);padding: 12px;">Contact</span></a></li>
                     </ul>
                 </div>
             </div>
